# lab1

./: .gitmodules
MessageStore/: Makefile  main.cpp
app-srv/: Makefile  main.cpp
common/: .cproject
dev_env/: .private_aliases  .private_env  .private_functions  .private_vi_mapping
fukushima/: CMakeLists.txt  main.cpp
fukushima/event_dispatcher/: CMakeLists.txt
fukushima/event_dispatcher/events/inc/: ipc_events.h
fukushima/event_dispatcher/events/src/: ipc_events.cpp
fukushima/event_dispatcher/inc/: memory_block_view.h
fukushima/event_dispatcher/proactor/: CMakeLists.txt
fukushima/event_dispatcher/proactor/inc/: proactor.h
fukushima/event_dispatcher/proactor/src/: proactor.cpp
fukushima/event_dispatcher/src/: proactor.cpp
fukushima/ut/: CMakeLists.txt
fukushima/ut/src/: test_proactor.cpp
loader_magic/: CMakeLists.txt  basic_exceptions.h  command_n_control.h  loadable_object.cpp  loadable_object.h  loader_fd.h  loader_magic_test.cpp
machine-saver/: saver.cpp  saver.cpp~
mem_db/: .cproject  .project  ToDo.txt
producer-consumer/: Makefile  consumer_task.cpp  consumer_task.h  message_types.h  producer_task.cpp  producer_task.h  serialization_utils.h  task.h
scrap/: access_template_class_member  access_template_class_member.cpp  add.c  calling_main  calling_main.cpp  change_proc_name.c  clang-mac.cpp  default_value_on_templated_arg.cpp  endless_recursion.cpp  exception_and_dtor.cpp  func_param_scope.sh  func_try_blocks.cpp  inherite_members  inherite_members.cpp  nested_friendship.cpp  no_ret_statment  no_ret_statment.cpp  no_ret_statment2.cpp  offsetof.cpp  override_calls_override  override_calls_override.cpp  parent_polymorphism.cc  polymor.cpp  popen_test.cc  private_nested_class.cc  reverse_str.cpp  silent_exec.cpp  static_non_static_overloading.cpp  std_array_template_size.cpp  template_and_poly.cpp  template_member.cpp  test_script.sh  timed_out_popen_classic_fork  timed_out_popen_threads  (+9 more)
(+140 files in other folders)
